--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/annotations": "^1.0",
+        "doctrine/dbal": "^2.13",
         "doctrine/doctrine-bundle": "^2.3",
-        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.10",
         "knplabs/knp-paginator-bundle": "^5.7",
         "phpdocumentor/reflection-docblock": "^5.3",
